--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -33,7 +33,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807421.md#1">北京朝阳医院医生被砍数刀 医护及市民亦被伤</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807080.md#1">伊朗女子在天桥上大喊：让哈梅内伊去死！</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807210.md#1">刊“娶刘亦菲可行性报告” 中共省级期刊惹议</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806894.md#1">韩国首现武汉肺炎确诊病例 患者为大陆女子</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806894.md#1">韩国首现武汉肺炎确诊病例 大陆女子被隔离</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806443.md#1">武汉肺炎疫情快速蔓延 浙江现5例疑似病例</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806368.md#1">【预告】新唐人将对大陆独家播出神韵晚会</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806307.md#1">【翻墙必看】轧故宫红三代疑到美国 再炫富</a><br>
