--- a/gb/ncid278_2.md
+++ b/gb/ncid278_2.md
@@ -29,7 +29,7 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11774228.md#1" target="_blank">武汉男子推特批中共 遭判刑1年3个月</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11774228.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1409121712462269-600x400-150x120.jpg" align ="left"></a>湖北武汉一名56岁男子因多次在Twitter上发布批评中共高层的政策及有关“六四”等敏感言论，上个月遭到中共当局判刑1年3个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2009-11-29-twpaizhi-1-150x120.jpg" align ="left"></a>一本书能挽救人的性命，一本书能改变人的命运，一本书能让社会风气回归纯朴，人世间是什么书能有如此神奇力量？在中共统治下的中国大陆，这本书被列为禁书，但他却以46种文字在全球一百多个国家和地区发行，成为被译成外文最多的中文书，受各族裔推崇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/28/n11751179.md#1" target="_blank">安徽合肥三位医护人员经历的残酷迫害</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/28/n11751179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-22-150x120.jpg" align ="left"></a>在中共对法轮功持续20年的迫害中，不计其数的法轮功学员因为不放弃修炼，惨遭中共的迫害，身心受到巨大的伤害，甚至失去生命。本文所讲述的安徽省合肥地区三位修炼法轮功的医护人员的遭遇，只是无数法轮功学员被迫害事实的冰山一角。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11790689.md#1" target="_blank">人权组织成员被拒入香港 吁抵制中共霸权</a><br></h3>美国人权组织“人权观察”执行长肯尼思?罗斯（Kenneth Roth），原定到香港发表人权报告，12日抵港时遭港府拒绝入境。他批评北京当局明显在压制香港，限制港人在“一国两制”下的有限自由，并呼吁国际社会共同抵制中共的霸权。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月14日 12:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/28/n11751497.md#1" target="_blank">法轮功学员柳德玉遭范家台监狱迫害致肺结核</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/28/n11751497.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-12-3-minghui-persecution-shayang1-150x120.jpg" align ="left"></a>湖北省荆门市法轮功学员柳德玉于2018年10月被劫持到湖北沙洋范家台监狱，因坚持信仰，被迫害得骨瘦如柴，患了肺结核，现一直在沙洋监狱住院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 9:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/13/n11789341.md#1" target="_blank">冤狱14年 山东张志超奸杀案改判无罪</a><br></h3>山东省男子张志超14年前被认定奸杀女同学被判无期徒刑，今天（2020年1月13日）被改判无罪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 6:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11780459.md#1" target="_blank">黑龙江法轮功学员王德海被迫害离世</a><br></h3>黑龙江孙吴县法轮功学员王德海经历了中共不法人员数次骚扰、绑架、洗脑、判刑等迫害，尤其是4年冤狱的迫害使他的身体遭到致命的伤害，出狱后仍被持续骚扰，于2019年10月含冤离世。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 4:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/7/n11774971.md#1" target="_blank">四川八名法轮功学员遭冤判 法院欺瞒家人</a><br></h3>2019年10月29日，四川绵竹市八名法轮功学员被非法庭审，四位律师依法为他们做了无罪辩护。12月31日，安州区法院偷偷提前庭审、宣判，欺瞒律师和法轮功学员家属，对八人非法判刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 7:04 PM							</td></tr>
