--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/crlhi259/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/crlhi259/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/crlhi259/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801340.md#1" target="_blank">冰岛知名景点“飞机残骸”惊见2中国人尸体</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-453201736-150x120.jpg" align ="left"></a>来自警方的消息，周四（1月16日），两名中国游客被发现死在冰岛旅游景点——位于索尔海马桑杜尔（Sólheimasandur）的1973坠机现场——附近。有关部门提醒游客，出门在外，要谨防恶劣天气带来的干扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 2:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801343.md#1" target="_blank">“两桶油”换帅 煤炭系官员掌中石化破惯例</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801343.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/05/1005311041441459-150x120.jpg" align ="left"></a>1月17日，中共两大石油央企同时撤换董事长，其中出身煤炭系的张玉卓主掌中石化，打破了几十年来石油、石化系统官员主掌石油央企的惯例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 2:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801318.md#1" target="_blank">置办年货 很多中国家庭为一件事犯愁</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801318.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1908301421442436-600x400-150x120.jpg" align ="left"></a>中国新年即将到来，忙着置办年货的中国老百姓却为一件事发愁：猪肉短缺的情况下如何准备节日大餐。河南一名姓徐（Xu，音译）的女士向路透社透露了心声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801004.md#1" target="_blank">习议“领导更替” 美媒：北京陷接班人怪圈</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801004.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>近期中共党媒透露，习近平讲话谈到“国家领导层更替”问题。纽约时报发表文章说，中共党内斗争极其残酷无情，特别权力更替期，毛最终败于他一手制造出来的接班人困局，现任中共领导人能规避毛那样的结局吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801219.md#1" target="_blank">大陆多座城市医院启动一级防护 传医护中招</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Unknown-2-150x120.jpg" align ="left"></a>武汉、长沙、成都、南宁、广州、深圳等大医院的急诊科，医护人员要穿上SARS期间的防疫防护衣来接诊所有发烧和呼吸道疾病患者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801174.md#1" target="_blank">大陆去年猪肉产量16年最低  涨价42.5%</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/583d10679d180759dd854d7b4f86acca-150x120.jpg" align ="left"></a>受非洲猪瘟疫情影响，大陆2019年猪肉年产量创下16年最低，令猪肉价格大涨。大陆民众直呼，现在是“吃不起猪肉也看不见猪跑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801220.md#1" target="_blank">吴花燕病亡 民政部募捐黑幕：4.9亿买理财</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11801220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8ad5fdd9ed9d103f27d08838c8dbd987-150x120.jpg" align ="left"></a>贵州24岁的贫困女大学生吴花燕在贫病交逼之中去世，中共民政部旗下儿慈会被揭一直利用她这样的重症儿童的名义募集大笔捐款，但捐款至死都没有给被救助者，而将4.9亿救助款用于投资理财。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 1:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800232.md#1" target="_blank">【十字路口】中美贸协难落实 川普另有大战略（1）</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800232.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15eaaf78de036317_ttl7daye36_20200117-150x120.jpg" align ="left"></a>中双方1月15日正式签署了第一阶段贸易协议，中方做出多项让步并承诺大量采购美方产品，将在协议生效后两年内加购至少2000亿美元的美国商品与服务。然而，中方的巨额采购承诺，也遭到各界质疑不可行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800353.md#1" target="_blank">中国人口首破14亿 出生率70年来最低</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800353.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/Fotolia_97959669_Subscription_L-150x120.jpg" align ="left"></a>中共官方最新统计显示，2019年的大陆人口已增至14亿零5万人，首破14亿人；男性人口较女性多出约3049万人，性别失衡明显。同时在人口自然成长率、出生率方面再下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796616.md#1" target="_blank">台作家：自由之火终将从香港台湾传到大陆</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11796616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/926f92dc5bd020141ff122984fcc5cf5-150x120.jpg" align ="left"></a>“一开始放鞭炮，零星的几个，我还不知道为什么？后来多起来了……”台湾胜选之夜，台湾作家夏祷赞叹台湾人有骨气。这次大选，台湾守住了自由民主体制、不向中共统战投降，被认为意义重大。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 10:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799356.md#1" target="_blank">【翻墙必看】美中贸易协议签署意味着什么</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799356.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/b12e08d7a43c5b2ddc889c507cb529aa-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
@@ -25,18 +33,10 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800036.md#1" target="_blank">中共纪检“内鬼”邱大明泄密收贿细节曝光</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/ne5-600x400-150x120.jpg" align ="left"></a>近年来，中共专责打虎的纪检系统频现“内鬼”。日前，吉林省纪委前副书记、省监察委员会前副主任邱大明的贪腐细节曝光，指其泄露工作机密、暗示商人花千万为其在京买房、收受巨额贿赂等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799432.md#1" target="_blank">《新闻拍案惊奇》观众Q&#038;A 如何注册会员？</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799432.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea8d324d5690fa_ttl7dayvm3_tn-small-2-150x120.jpg" align ="left"></a>《新闻拍案惊奇》观众Q&A，如何注册会员？人在大陆如何成为会员？会有隐私问题吗？会员区常见问题解答；节目内容调整：会员区增添新节目，非会员区内容不变，只会更好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799572.md#1" target="_blank">台举行大选后首次军事操演 以共军为假想敌</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001162343142378-150x120.jpg" align ="left"></a>黄历新年将至，中华民国国军官兵落实战备整备的精实战力，海军陆战队1月16日在高雄举行蔡英文总统连任后首次战备操演。国军某旅15日进行陆军备战操演，军方的假想敌是中共共军。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:44 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798917.md#1" target="_blank">武汉肺炎无法排除人传人 美国务院警告防疫</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11798917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193097821-150x120.jpg" align ="left"></a>日本确认首例武汉神秘肺炎病例，使得海外确诊2起此类病例。专家正在研究该病毒，还无法排除人传人可能性。继美驻华使馆发布警告后，美国国务院周三（1月15日）也发布旅行健康警报。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:08 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799718.md#1" target="_blank">大陆男子用牙膏画人像 关灯后令人惊叹</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799718.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_36808718_Subscription_L-150x120.jpg" align ="left"></a>大陆一名“牙膏哥”擅长用牙膏在浴室的镜子上画人脸素描。他的作品乍看之下并不怎么样，但当他把灯关掉时，他画的人像立即给人一种惊艳的感受。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:06 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799626.md#1" target="_blank">北京一公司申请“武大郎”商标被拒 网民热议</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/d2208ba0d3fdf694b01d0a33e12f9282-150x120.jpg" align ="left"></a>近日，大陆微博网民曝出，北京一公司申请“武大郎”商标被驳回，理由是武大郎是中共烈士。中共官方证实确有其事。对此，网民议论纷纷，并质疑：武大郎不是《水浒传》中的一个角色吗？怎么一虚构人物成了中共烈士？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:43 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799652.md#1" target="_blank">大陆去年GDP增长6.1% 创29年最低</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799652.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/economy-construction-tian-jing-GettyImages-474029480-600x400-150x120.jpg" align ="left"></a>1月17日，中共国家统计局发布去年的GDP数据显示，2019大陆大陆生产总值比上一年增长6.1%，创下29年最低经济增长速度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799461.md#1" target="_blank">新能源汽车补贴减少 大陆本土品牌雪上加霜</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799461.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>中国新能源汽车大补帖的时代已经过去，迎来的是独立竞争的时代，这将使得依靠补贴才能生存的中国汽车行业雪上加霜。去年，受经济不景气影响，中国多家汽车上市公司汽车销量下滑四至十多个百分点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799503.md#1" target="_blank">美海军导弹巡洋舰穿越台湾海峡 今年首次</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/USS_Shiloh_good_deck_detail_04016702-150x120.jpg" align ="left"></a>台湾国防部表示，周四（1月16日），美国一艘军舰穿越台湾海峡。美国海军也证实了这次行动。这也是美国军舰今年首次在台湾海峡航行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800435.md#1" target="_blank">中共纪检系统官员向大老虎泄密 并为其抹案</a><br></h3>日前，中共官媒专题片披露了吴文广、孟弘毅等纪检系统“内鬼”的贪污细节。两人分别与已落马的“大老虎”虞海燕案、王珉案有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800373.md#1" target="_blank">一周喝两次珍珠奶茶 河南男童患肠梗阻</a><br></h3>近日，河南新乡一名13岁男童因腹痛难忍被送入急诊，经检查是肠梗阻现象。医生了解到，男童病发前一周内喝过两次珍珠奶茶，并且其没有充分咀嚼珍珠。经手术，男童肠道里的异物三天后排出。医生建议，家长应少给孩子喝奶茶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799783.md#1" target="_blank">贸易协议严打仿冒及盗版 淘宝拼多多受关注</a><br></h3>中美第一阶段经贸协议将更加严格地打击电商平台的假冒和盗版问题，措施包括吊销平台网络经营许可。中国大陆电商平台的假货问题引发关注。大陆电商平台淘宝网和拼多多，都曾因打假不力被美国贸易代表办公室（USTR）列入“恶名市场”。
 
 1月16日中共财政部发布了中美第一阶段经贸协议，协议规定，针对未能采取必要措施整治知识产权侵权的主要电子商务平台，双方应采取有效行动.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799840.md#1" target="_blank">广东肇庆5车追尾 一车起火五5人死亡</a><br></h3>1月16日，广东肇庆G80广昆高速公路发生5车碰撞事故，导致5人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:41 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11799721.md#1" target="_blank">一塑料船在长江翻沉 5人下落不明</a><br></h3>1月16日凌晨，一艘小型“三无”塑料船在长江上翻沉，船上5人下落不明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/crlhi259/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
