--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -33,7 +33,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806307.md#1">【翻墙必看】轧故宫红三代疑到美国 再炫富</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807421.md#1">北京朝阳医院医生被砍数刀 医护及市民亦被伤</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807080.md#1">伊朗女子在天桥上大喊：让哈梅内伊去死！</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807210.md#1">刊“娶刘亦菲可行性报告” 中共省级期刊惹议</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807210.md#1">刊“娶刘亦菲可行性报告”中共法制期刊惹议</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806318.md#1">119“天下制裁”集会 港民：全球围堵中共</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806197.md#1">程晓容：香港“天下制裁”集会为何被中止？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806894.md#1">韩国首现武汉肺炎确诊病例 大陆女子被隔离</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/crlhi259/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 350,165,751 人
+- 共 350,170,229 人
 ```
 </strong>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
