--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -31,7 +31,7 @@
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807463.md#1">贸战熄火？专家：美架好“机枪”等中共违规</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807770.md#1">武汉肺炎大爆发 官媒确认人传人  习李发话</a><br>
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807770.md#1">武汉肺炎大爆发 钟南山确认人传人 习李发话</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807690.md#1">专访前马英九发言人徐巧芯：国民党为何惨败（上）</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807565.md#1">【拍案惊奇】武汉肺炎扩散 15万港人反暴政</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806307.md#1">【翻墙必看】轧故宫红三代疑到美国 再炫富</a><br>
