--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797750.md#1" target="_blank">台湾2020大选结果命理观</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/16/n11797750.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X6244-1-150x120.jpg" align ="left"></a>天下大事的发生都配合“天时、地利、人和”，所谓“时也、命也、运也”。历来王朝兴衰起落皆依“五行生克断代”，台湾2020年年初总统选举结果又作和解呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 7:57 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/27/n11750145.md#1" target="_blank">影落江湖里？消失的名人——建文帝</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/19/12/27/n11750145.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1806051022232483-150x120.jpg" align ="left"></a>曾有人盘点中国史上神秘消失的七位名人，其中有一位是明朝第二任皇帝——建文帝朱允炆，至今无人确切知晓他的去向，为后人留下不解之谜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/2/n11764079.md#1" target="_blank">大唐御赐簪花趣闻</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/2/n11764079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/zhou-fang-zanhuashinu-150x120.jpg" align ="left"></a>倘若欣赏大唐仕女图，会看到女子的头上戴着硕大的牡丹花，令仕女仪态更显雍华富丽。若改成男子戴花，是否会煞风景呢？其实唐朝不只是女子爱花，官员也不例外，甚至有过之而无不及。哪位王子或官员若能得到皇帝御赐的花朵，将其戴在头上，在当时即是莫大的荣耀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794733.md#1" target="_blank">《墨子》与《易》的大道关连</a><br></h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/15/n11794733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/06/140618160417976-150x120.jpg" align ="left"></a>墨子是墨家的代表人物，而《易》并非墨家典籍，这两者为什么会有关连呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:30 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807913.md#1" target="_blank">诗歌：正念除恶</a><br></h3>正念除恶志气豪 立掌犹似天地刀 神通直令山河动 法力更比日月高......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月21日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807912.md#1" target="_blank">诗歌：中共大势已去</a><br></h3>跳脚欲狂软无力 搬起石头砸自己 谁沾邪共谁倒楣 末路尽头被众弃......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月20日 11:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11805792.md#1" target="_blank">童诗：小飞燕</a><br></h3>阳光下，
 背着爷爷的大背包，
