--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/crlhi259/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807823.md#1">【新闻看点】战狼外交再碰壁 瑞典欲逐中共大使桂从友</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807463.md#1">贸战熄火？专家：美架好“机枪”等中共违规</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806712.md#1">响应香港抗暴 纽约港人“制裁中共”游行</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807770.md#1">武汉肺炎大爆发 钟南山确认人传人 习李发话</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11807210.md#1">刊“娶刘亦菲可行性报告”中共法制期刊惹议</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806197.md#1">程晓容：香港“天下制裁”集会为何被中止？</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806318.md#1">119“天下制裁”集会 港民：全球围堵中共</a><br>
-<a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806894.md#1">韩国首现武汉肺炎确诊病例 大陆女子被隔离</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/19/n11804926.md#1">曾遭冤狱8年 法轮功学员席栓省被迫害致死</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/17/n11800232.md#1">【十字路口】中美贸协难落实 川普另有大战略（1）</a><br>
 <a href="https://github.com/crlhi259/djy/blob/master/gb/20/1/20/n11806443.md#1">武汉肺炎疫情快速蔓延 浙江现5例疑似病例</a><br>
